# spectmorph

./: .dockerignore  .gitignore  DESIGN  Doxyfile  Makefile.am  Makefile.decl  NEWS  NEWS.md  README  README.md  TODO  autogen.sh  configure.ac  spectmorph.pc.in  spectmorphglui.pc.in  spectmorphgui.pc.in
beast/: .gitignore  Makefile.am  spectmorphdelay.cc  spectmorphdelay.idl  spectmorphosc.cc  spectmorphosc.idl
beast/gui/: .gitignore  Makefile.am  smindex.cc  (+36 more)
clap/: .gitignore  Makefile.am  ldscript.map  smclapplugin.cc
data/: Makefile.am  smjack.desktop  smjack.xcf
docs/: .gitignore  Makefile.am  manual-template.html  manual.adoc  manual.css  manual.md  manual.sh  smenc.1  smenc.1.doxi  smenc.1.wiki  sminspector.1  sminspector.1.doxi  sminspector.1.wiki  sminstbuilder.1  sminstbuilder.1.wiki  smjack.1  smjack.1.wiki  smplay.1  smplay.1.doxi  smplay.1.wiki  smsfimport.1  smsfimport.1.doxi  smsfimport.1.wiki  smstrip.1  smstrip.1.doxi  smstrip.1.wiki  smtool.1  smtool.1.wiki  smvisualize.1  smvisualize.1.doxi  smvisualize.1.wiki  smwavset.1  smwavset.1.doxi  smwavset.1.wiki  spectmorph.odt  spectmorphoscgui.1  spectmorphoscgui.1.wiki
glui/: .gitignore  Makefile.am  TODO  smaboutdialog.cc  smaboutdialog.hh  smbankeditwindow.hh  smbutton.hh  smcheckbox.hh  smclickablelabel.hh  smcombobox.hh  smcomboboxoperator.cc  smcomboboxoperator.hh  smconfig.hh  smcontrolstatus.hh  smcontrolview.hh  smcreatebankwindow.hh  smdialog.cc  smdialog.hh  smdrawutils.cc  smdrawutils.hh  smenumview.hh  smeventloop.cc  smeventloop.hh  smextfiledialog.cc  smextfiledialog.hh  smfiledialog.cc  smfiledialog.hh  smfixedgrid.hh  smfoldbutton.hh  smframe.hh  sminsteditnote.hh  sminsteditparams.hh  sminsteditvolume.hh  sminsteditwindow.cc  sminsteditwindow.hh  smlabel.hh  smled.hh  smlineedit.cc  smlineedit.hh  smlinuxfiledialog.cc  (+80 more)
gui/: .gitignore  Makefile.am  smcomboboxoperator.cc  smcomboboxoperator.hh  smfiledialog.cc  smfiledialog.sh  smled.cc  smled.hh  smlpcztrans.cc  smlpcztrans.hh  smmainwindow.cc  smmainwindow.hh  smmorphgridview.cc  smmorphgridview.hh  smmorphgridwidget.cc  smmorphgridwidget.hh  smmorphlfoview.cc  smmorphlfoview.hh  smmorphlinearview.cc  smmorphlinearview.hh  smmorphoperatorview.cc  smmorphoperatorview.hh  smmorphoutputview.cc  smmorphoutputview.hh  smmorphplancontrol.cc  smmorphplancontrol.hh  smmorphplanview.cc  smmorphplanview.hh  smmorphplanwindow.cc  smmorphplanwindow.hh  smmorphsourceview.cc  smmorphsourceview.hh  smmoveindicator.cc  smmoveindicator.hh  smpropertyview.cc  smpropertyview.hh  smrenameoperatordialog.cc  smrenameoperatordialog.hh  smsampleview.cc  smsampleview.hh  (+3 more)
inspector/: .gitignore  Makefile.am  TASKS  inspect1  smcommon.hh  smcwt.cc  smcwt.hh  smdisplayparamwindow.cc  smdisplayparamwindow.hh  smfftparamwindow.cc  smfftparamwindow.hh  smfftthread.cc  smfftthread.hh  sminspector.cc  smlpcview.cc  smlpcview.hh  smlpcwindow.cc  smlpcwindow.hh  smmainwindow.cc  smmainwindow.hh  smmicroconf.hh  smnavigator.cc  smnavigator.hh  smnavigatorwindow.cc  smnavigatorwindow.hh  smpixelarray.cc  smpixelarray.hh  smplayerwindow.cc  smplayerwindow.hh  smsampleview.cc  smsampleview.hh  smsamplewindow.cc  smsamplewindow.hh  smsamplewinview.cc  smsamplewinview.hh  smspectrumview.cc  smspectrumview.hh  smspectrumwindow.cc  smspectrumwindow.hh  smtimefreqview.cc  (+8 more)
instedit/: .gitignore  Makefile.am  TODO  sminstedit.cc  sminsteditwindow.hh  sminstrument.hh  smsamplewidget.hh  smwavsetbuilder.cc  smwavsetbuilder.hh
jack/: .gitignore  Makefile.am  smjack.cc  smjack.hh  smjackvel.cc  smmalloctracer.hh  smsimplejackplayer.cc  smsimplejackplayer.hh
lib/: Makefile.am  smadsrenvelope.cc  smadsrenvelope.hh  smafile.cc  smafile.hh  smalignedarray.cc  smalignedarray.hh  smaudio.cc  smaudio.hh  smaudiotool.cc  smaudiotool.hh  smbinbuffer.hh  smblockutils.cc  smblockutils.hh  smbuilderthread.cc  smbuilderthread.hh  smcache.cc  smcache.hh  smconfig.cc  smconfig.hh  smcurve.cc  smcurve.hh  smdcblocker.hh  smdebug.cc  smdebug.hh  smeffectdecoder.cc  smeffectdecoder.hh  smencoder.cc  smencoder.hh  smfft.cc  smfft.hh  smfilterenvelope.hh  smflexadsr.hh  smformantcorrection.cc  smformantcorrection.hh  smframe.cc  smframe.hh  smgenericin.cc  smgenericin.hh  smgenericout.cc  (+152 more)
lv2/: .gitignore  Makefile.am  ldscript.map  macos_export_symbols  manifest.ttl  manifest.ttl.in  smlv2common.hh  smlv2plugin.cc  smlv2plugin.hh  smlv2ui.cc  smlv2ui.hh  spectmorph.ttl  spectmorph.ttl.in  spectmorph_lv2.cc  spectmorph_lv2.cpp  spectmorph_lv2_ui.cc  timing_test.sh
nobse/: Makefile.am  minipcg32.hh  nobse.cc  nobse.hh
python/: Makefile.am  extract.py  sinsignal.py  spectmorph.cc
src/: .gitignore  Makefile.am  frame.cc  frame.hh  noisedecoder.cc  noisedecoder.hh  sinedecoder.cc  sinedecoder.hh  smenc.cc  smextract.cc  smplay.cc  smstrip.cc  smtool.cc  smvisualize.cc  smwavset.cc  stwafile.cc  stwafile.hh  stwaudio.hh  stwaudio.idl  stwutils.hh
tests/: .gitignore  Makefile.am  avg_energy.py  hilbert.py  post-install-test.sh  saw440x.py  sin440.py  sinsignal.py  smresvalue.sh  smresvalue.sh.in  sn_delta.py  test-common.sh.in  test-norm.sh  test-porta.sh  testaafilter.cc  testadsr.cc  testadsrdecay.cc  testautovol.cc  testbesseli0.cc  testblob.cc  testblockmath.cc  testblockperf.cc  testceventlock.cc  testconvperf.cc  testcurve.cc  testfastsin.cc  testfft.cc  testfftperf.cc  testgenid.cc  testidb.cc  testifftsynth.cc  testifreq.cc  testinstbuild.cc  testisincos.cc  testjobqueue.cc  testladdervcf.cc  testlfo.cc  testloopindex.cc  testlowpass1.cc  testlpc.cc  (+35 more)
tools/: .gitignore  Makefile.am  ascii2wav.cc  build-gprof.sh  delta.py  fftdelta.py  imiscutter.cc  pbuilder.sh  polyphasefir.py  smenccache.cc  smeval.py  smevalplayer.cc  smfcompare.cc  smfiledump.cc  smfileedit.cc  sminspector.cc  sminstbuilder.in  smlive.cc  smrunplan.cc  smsampleedit.cc  smsampleedit.hh  smsetload.cc  smsfimport.cc  smutils.py  testporta.sh  testvib.py  tld.cc  wav2ascii.cc
vst/: .gitignore  Makefile.am  ldscript.map  smvstcommon.hh  smvstplugin.cc  smvstplugin.hh  smvstresize.hh  smvstui.cc  smvstui.hh  testlink.cc
(+92 files in other folders)
